master: changes in concepts

--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,22 +1,24 @@
-remediation=-1
-RBAC=-1
-Kerberos\ principal=-1
-AFC=-1
-TLS=-1
-GCT=-1
+remediation=-2
+RBAC=-2
+Kerberos\ principal=-2
+data\ custodian=-1
+Liferay=-1
+Hibernate=-1
+Genesys\ Cloud=-1
+Bean\ factory/\ Application\ context=-1
+SSH=-1
+SSL=-1
 cluster=1
 tamper=1
-PR=1
 metadata=1
-CDD=1
-aspect\ oriented\ programming=1
+PR=1
 base\ (math)=1
+aspect\ oriented\ programming=1
 Rancher\ features=1
 servlet=1
 CI\ (IT\ component)=1
 diligence=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
-F5\ rules=1
 domain\ model=1
 pivot=1
 test\ pilot=1
@@ -31,15 +33,16 @@ URL\ safe\ format=1
 full-text\ search=1
 diamond\ operator\ (Java)=1
 credential\ examples=1
-RESTful\ data\ formats=1
-container\ management\ platform=1
-aspect=1
 Swagger=1
+aspect=1
+container\ management\ platform=1
+RESTful\ data\ formats=1
 separation\ of\ concerns\ (DDD)=1
 Wireshark=1
 staging\ environment=1
-commissioning\ example=1
+servlet/controller/MVC=1
 SwiftUI=1
+commissioning\ example=1
 error\ budget=1
 bounded\ context=1
 cloud\ platform=1
@@ -49,10 +52,10 @@ gateway\ team=1
 DC=1
 base\ Java\ Docker\ image=1
 cohesion\ (DDD)=1
-IMDG=1
 ICT\ system\ (components)=1
-JETTY=1
+IMDG=1
 bounded\ context\ (example\ of\ order\ processing)=1
+JETTY=1
 YAML=1
 MLM=1
 Kerberos=1
@@ -63,10 +66,9 @@ bad\ cohesion\ (DDD)=1
 JWT=1
 PVC\ (containerisation)=1
 good\ cohesion\ (DDD)=1
-package\ (software)=1
 to\ prompt=1
-factory\ pattern=1
 Google\ Cloud=1
+factory\ pattern=1
 entity\ (database)=1
 firewall\ opening=1
 component\ scanning=1
@@ -79,26 +81,22 @@ heap\ space=1
 defensive\ programming=1
 JDBC=1
 subsetting\ data=1
-e.g.=1
 gateway=1
 DNS=1
 Saba=1
-deque=1
 Kerberos\ keytab=1
+deque=1
 SLI=1
 exploratory\ testing=1
 dispatcher=1
 database\ transactions=1
 Logread=1
-RESTful=1
+landing\ page=1
 allocate\ a\ list=1
-Logstash=1
-build\ process=1
 value\ stream=1
 Kerberos\ keytab\ key=1
 allocate=1
 postmortem=1
-data\ flow=1
 secret\ (Kubernetes)=1
 Kibana=1
 ubiquitous\ language\ (DDD)=1
@@ -107,11 +105,11 @@ exponent\ (math)=1
 URL=1
 web=1
 onboarding=1
+JPA\ entity\ management\ (db)=1
 DC\ components=1
 ECB=1
 GitHub\ repository\ access\ HTTPS\ vs\ SSH=1
 bounded\ context\ (example\ of\ inventory\ management)=1
-abstraction\ examples=1
 token=1
 pipeline=1
 framework=1
@@ -119,6 +117,7 @@ assess=1
 firewall=1
 DevSecOps=1
 chaos\ engineering=1
+pointcut=1
 Helm=1
 facility=1
 Java\ bean=1
@@ -150,7 +149,6 @@ DevOps=1
 namespace\ (networking)=1
 continuous\ integration\ components=1
 retrieve=1
-JPA=1
 cohesion=1
 Spring\ boot=1
 GDPR=1
@@ -159,39 +157,43 @@ ubiquitous=1
 JPQL=1
 performance\ testing=1
 semantic\ registration\ message=1
+JPA\ responsibilities\ (db)=1
 Data\ governance=1
 VPN\ whitelisting=1
 Elasticsearch=1
 asynchronous=1
 object\ mapping\ (database)=1
 detrimental=1
+DORA=1
 heap=1
+Hazelcast=1
+arbitrary=1
 collision\ resistant=1
 SSO=1
 means\ of\ defensive\ programming=1
+application\ server=1
 REST=1
 due=1
 CTE\ (SQL)=1
 API=1
 hash\ use\ cases=1
-JPA\ responsibilities=1
 CTO=1
-servlet/controller/MVC=1
 vague=2
 connection\ pool\ (context\:\ database)=2
 synchronous=2
 container\ image=2
 usability\ testing=2
 functional\ testing=2
+F5\ rules=2
 directed\ graph=2
 sticky\ session\ benefit=2
 bad\ separation\ of\ concerns\ (DDD)=2
 trie=2
-JPA\ transaction=2
 JSX=2
 RESTful\ layers=2
 domain=2
 deterministic=2
+SES\ (Smart-ID)=2
 customer\ data\ domain=2
 justified\ vs\ excusable=2
 real-time\ data\ flow=2
@@ -207,6 +209,7 @@ distributed\ computing=2
 web\ container=2
 sticky\ session=2
 intrusive=2
+package\ (software)=2
 connection\ protection\ (examples)=2
 F5=2
 enhanced=2
@@ -226,35 +229,42 @@ good\ separation\ of\ concerns\ (DDD)=2
 partition\ and\ sample=2
 container=2
 encapsulation=2
+JPA\ transaction\ (db)=2
 UI\ dialog=2
 overlay\ (web)=2
+CDD\ (compliance)=2
 credential=2
 Kafka\ vs\ Kubernetes=2
 data\ pseudonymization=2
 undirected\ graph=2
+RESTful=2
 code\ integration=2
 PV\ (containerisation)=2
+Logstash=2
+build\ process=2
 obfuscate\ data=2
 integrity\ (of\ documents)=2
 web\ portal=2
 edge\ (graphs)=2
 stop\ word\ filtering=2
+data\ flow=2
 hash=2
 artifactory=2
 microservice=2
 Kafka=2
 operational\ risk=2
+QES\ (Smart-ID)=2
 product\ backlog\ (agile)=2
 Rancher\ platform=2
 domain\ vs\ bounded\ context=2
 RESTful\ client-server=2
 semantic\ message=2
 A/B\ testing=2
+abstraction\ examples=2
 commissioning=2
 verbose=2
 API\ gateway=2
 CI/CD=2
-JPA\ entity\ management=2
 tampering=2
 Loki\ (observability)=2
 canary\ deployment=2
@@ -266,6 +276,7 @@ credibility=2
 state\ (of\ object)=2
 memoization=2
 artifact\ (context\:\ compilation)=2
+AES\ (Smart-ID)=2
 Jenkins=2
 collision=2
 backlog=2
@@ -302,6 +313,7 @@ XSS=3
 parity=3
 ORM=3
 Ivy\ integration\ to\ Gradle=3
+TLS=3
 signup\ raw\ data=3
 compatibility\ testing=3
 personal\ data\ retention=3
@@ -314,16 +326,20 @@ ECB\ stress\ test=3
 stakeholder=4
 Docker=4
 JSP=4
+JPA\ (db)=4
 master\ node=4
 endpoint=4
 PPTE=4
 penetration\ testing=4
 WoW=4
 mitigate=4
+EDD\ (compliance)=4
 suite=4
 boilerplate=4
 technical\ debt=4
+AFC\ (compliance)=4
 bounded=4
+Kerberos\ ticket=4
 dispose\ of\ a\ list=4
 throttling=4
 deduce=4
@@ -335,6 +351,7 @@ non-semantic\ message=4
 SLO=4
 thoroughness=4
 poor\ separation\ of\ concerns\ for\ DocManager=4
+UAT=4
 FDP=4
 RDBMS=4
 PCI\ DSS=4
@@ -353,8 +370,10 @@ substitution\ (general\ word)=4
 outdegree=4
 CTE\ (sandbox)=4
 comply=4
+product\ life\ cycle\ management=4
 Chromium=4
 Kubernetes=4
+e.g.=5
 runtime=5
 greedy\ solution=8
 interface=8
