master: managed concepts

--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -5,6 +5,7 @@ data\ custodian=-1
 Liferay=-1
 Hibernate=-1
 Genesys\ Cloud=-1
+HSM\ (device)=-1
 Bean\ factory/\ Application\ context=-1
 SSH=-1
 SSL=-1
@@ -42,7 +43,6 @@ Wireshark=1
 staging\ environment=1
 servlet/controller/MVC=1
 SwiftUI=1
-commissioning\ example=1
 error\ budget=1
 bounded\ context=1
 cloud\ platform=1
@@ -62,7 +62,6 @@ Kerberos=1
 DDoS\ attacks=1
 stub=1
 throughput=1
-bad\ cohesion\ (DDD)=1
 JWT=1
 PVC\ (containerisation)=1
 good\ cohesion\ (DDD)=1
@@ -85,7 +84,6 @@ gateway=1
 DNS=1
 Saba=1
 Kerberos\ keytab=1
-deque=1
 SLI=1
 exploratory\ testing=1
 dispatcher=1
@@ -93,11 +91,9 @@ database\ transactions=1
 Logread=1
 landing\ page=1
 allocate\ a\ list=1
-value\ stream=1
 Kerberos\ keytab\ key=1
 allocate=1
 postmortem=1
-secret\ (Kubernetes)=1
 Kibana=1
 ubiquitous\ language\ (DDD)=1
 roll\ out=1
@@ -108,8 +104,8 @@ onboarding=1
 JPA\ entity\ management\ (db)=1
 DC\ components=1
 ECB=1
-GitHub\ repository\ access\ HTTPS\ vs\ SSH=1
 bounded\ context\ (example\ of\ inventory\ management)=1
+GitHub\ repository\ access\ HTTPS\ vs\ SSH=1
 token=1
 pipeline=1
 framework=1
@@ -128,7 +124,6 @@ subnet=1
 DBA=1
 KPI=1
 DRT=1
-unit\ testing=1
 NFC=1
 DRY=1
 test\ integration=1
@@ -143,7 +138,6 @@ streamline=1
 volatile\ (Java)=1
 Ingress\ Controller=1
 web\ server=1
-traverse=1
 container\ runtime=1
 DevOps=1
 namespace\ (networking)=1
@@ -228,11 +222,13 @@ hub=2
 good\ separation\ of\ concerns\ (DDD)=2
 partition\ and\ sample=2
 container=2
+commissioning\ example\ sentence=2
 encapsulation=2
 JPA\ transaction\ (db)=2
 UI\ dialog=2
 overlay\ (web)=2
 CDD\ (compliance)=2
+deque=2
 credential=2
 Kafka\ vs\ Kubernetes=2
 data\ pseudonymization=2
@@ -243,12 +239,14 @@ PV\ (containerisation)=2
 Logstash=2
 build\ process=2
 obfuscate\ data=2
+value\ stream=2
 integrity\ (of\ documents)=2
 web\ portal=2
 edge\ (graphs)=2
 stop\ word\ filtering=2
 data\ flow=2
 hash=2
+secret\ (Kubernetes)=2
 artifactory=2
 microservice=2
 Kafka=2
@@ -268,6 +266,7 @@ CI/CD=2
 tampering=2
 Loki\ (observability)=2
 canary\ deployment=2
+unit\ testing=2
 hashing=2
 to\ stash=2
 irreversible\ data\ transformation=2
@@ -278,6 +277,7 @@ memoization=2
 artifact\ (context\:\ compilation)=2
 AES\ (Smart-ID)=2
 Jenkins=2
+traverse=2
 collision=2
 backlog=2
 dispose=2
@@ -307,6 +307,7 @@ dispose\ of\ memory=3
 DPIA=3
 ELK=3
 indegree=3
+bad\ cohesion\ (DDD)=3
 integrated\ test\ environment=3
 port=3
 XSS=3
