--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,28 +1,15 @@
-remediation=-2
-RBAC=-2
-Kerberos\ principal=-2
-data\ custodian=-1
-Liferay=-1
-Hibernate=-1
-Genesys\ Cloud=-1
+SSH=-2
+SSL=-2
 HSM\ (device)=-1
-Bean\ factory/\ Application\ context=-1
-SSH=-1
-SSL=-1
 cluster=1
 tamper=1
 PR=1
-metadata=1
-aspect\ oriented\ programming=1
 base\ (math)=1
+aspect\ oriented\ programming=1
 Rancher\ features=1
-servlet=1
-CI\ (IT\ component)=1
-diligence=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
 domain\ model=1
 pivot=1
-test\ pilot=1
 AD=1
 Argo\ CD=1
 hyphen\ ("-")\ function=1
@@ -30,71 +17,58 @@ ICT\ system=1
 Hungarian\ pollution=1
 pod=1
 URL\ safe\ format=1
-.war\ file=1
 full-text\ search=1
+.war\ file=1
 diamond\ operator\ (Java)=1
 credential\ examples=1
-RESTful\ data\ formats=1
-container\ management\ platform=1
-aspect=1
 Swagger=1
+aspect=1
+container\ management\ platform=1
+RESTful\ data\ formats=1
 separation\ of\ concerns\ (DDD)=1
 Wireshark=1
-staging\ environment=1
 servlet/controller/MVC=1
 SwiftUI=1
 error\ budget=1
 bounded\ context=1
-cloud\ platform=1
-Helm\ chart=1
 good\ cohesion\ for\ DocManager=1
 gateway\ team=1
 DC=1
 base\ Java\ Docker\ image=1
 cohesion\ (DDD)=1
-IMDG=1
 ICT\ system\ (components)=1
-JETTY=1
 bounded\ context\ (example\ of\ order\ processing)=1
-YAML=1
+JETTY=1
 MLM=1
 Kerberos=1
 DDoS\ attacks=1
 stub=1
 throughput=1
-JWT=1
-PVC\ (containerisation)=1
 good\ cohesion\ (DDD)=1
 to\ prompt=1
 factory\ pattern=1
 Google\ Cloud=1
-entity\ (database)=1
 firewall\ opening=1
 component\ scanning=1
-pagination=1
 regression\ testing=1
-JSON=1
 garbage\ collection=1
 proprietary=1
 heap\ space=1
-defensive\ programming=1
 JDBC=1
-subsetting\ data=1
+defensive\ programming=1
+GCT=1
 gateway=1
 DNS=1
 Saba=1
 Kerberos\ keytab=1
-SLI=1
 exploratory\ testing=1
 dispatcher=1
 database\ transactions=1
-Logread=1
-landing\ page=1
 allocate\ a\ list=1
 Kerberos\ keytab\ key=1
 allocate=1
-postmortem=1
 Kibana=1
+test\ pilot\ (IT)=1
 ubiquitous\ language\ (DDD)=1
 roll\ out=1
 exponent\ (math)=1
@@ -110,23 +84,17 @@ token=1
 pipeline=1
 framework=1
 assess=1
-firewall=1
-DevSecOps=1
 chaos\ engineering=1
 pointcut=1
 Helm=1
-facility=1
 Java\ bean=1
 etcd=1
 Unix=1
 Java\ EE=1
-DBA=1
-KPI=1
 DRT=1
 NFC=1
 DRY=1
 test\ integration=1
-etcd\ etymology=1
 cloud=1
 security\ testing=1
 NFS=1
@@ -136,21 +104,17 @@ observability=1
 streamline=1
 volatile\ (Java)=1
 Ingress\ Controller=1
-web\ server=1
+Genesys\ Cloud=1
 container\ runtime=1
 DevOps=1
 namespace\ (networking)=1
 continuous\ integration\ components=1
 retrieve=1
-cohesion=1
 Spring\ boot=1
 GDPR=1
 DGOM=1
 ubiquitous=1
-JPQL=1
-performance\ testing=1
 semantic\ registration\ message=1
-JPA\ responsibilities\ (db)=1
 Data\ governance=1
 VPN\ whitelisting=1
 Elasticsearch=1
@@ -164,15 +128,13 @@ arbitrary=1
 collision\ resistant=1
 SSO=1
 means\ of\ defensive\ programming=1
-application\ server=1
 REST=1
-due=1
 CTE\ (SQL)=1
 API=1
 hash\ use\ cases=1
 CTO=1
-vague=2
 connection\ pool\ (context\:\ database)=2
+vague=2
 synchronous=2
 container\ image=2
 usability\ testing=2
@@ -188,15 +150,19 @@ domain=2
 deterministic=2
 SES\ (Smart-ID)=2
 customer\ data\ domain=2
+remediation=2
 justified\ vs\ excusable=2
+staging\ environment=2
 real-time\ data\ flow=2
 assemble=2
 good\ separation\ of\ concerns\ for\ DocManager=2
+RBAC=2
 integration\ testing=2
 worker\ node=2
 bounded\ context\ (example\ of\ user\ management)=2
 deploying=2
 proxy\ pattern=2
+YAML=2
 container\ instance=2
 distributed\ computing=2
 web\ container=2
@@ -207,15 +173,18 @@ connection\ protection\ (examples)=2
 F5=2
 enhanced=2
 VIP\ (OpenShift)=2
+entity\ (database)=2
 lazy\ initialization=2
 feature\ flag=2
 coupling\ (noun)\ (software)=2
 enterprise-level=2
 operations\ specialist=2
+JSON=2
 Ivy=2
 VPN=2
 OpenShift=2
 jar\ hell=2
+subsetting\ data=2
 volatile=2
 hub=2
 good\ separation\ of\ concerns\ (DDD)=2
@@ -228,10 +197,12 @@ UI\ dialog=2
 overlay\ (web)=2
 CDD\ (compliance)=2
 deque=2
+SLI=2
 credential=2
 Kafka\ vs\ Kubernetes=2
 data\ pseudonymization=2
 undirected\ graph=2
+landing\ page=2
 RESTful=2
 code\ integration=2
 PV\ (containerisation)=2
@@ -260,9 +231,11 @@ A/B\ testing=2
 abstraction\ examples=2
 commissioning=2
 verbose=2
+firewall=2
 API\ gateway=2
 CI/CD=2
 tampering=2
+facility=2
 Loki\ (observability)=2
 canary\ deployment=2
 unit\ testing=2
@@ -280,6 +253,7 @@ traverse=2
 collision=2
 backlog=2
 dispose=2
+cohesion=2
 IoC=2
 signup\ metadata=2
 RESTful\ methods=2
@@ -296,15 +270,20 @@ using\ APIs=2
 stereotype\ in\ Spring=2
 Spring\ beans=2
 test\ data\ management\ for\ enterprise=2
+due=2
 Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
 modal\ window=2
-subnet=3
 due\ diligence=3
+servlet=3
+CI\ (IT\ component)=3
+diligence=3
 AWS\ (cloud)=3
 dispose\ of\ memory=3
+cloud\ platform=3
 DPIA=3
+IMDG=3
 ELK=3
 indegree=3
 bad\ cohesion\ (DDD)=3
@@ -318,12 +297,20 @@ TLS=3
 signup\ raw\ data=3
 compatibility\ testing=3
 personal\ data\ retention=3
+Logread=3
 servlet\ container=3
 custody=3
 PII=3
+subnet=3
+etcd\ etymology=3
+web\ server=3
+JPQL=3
+performance\ testing=3
 paradigm=3
+JPA\ responsibilities\ (db)=3
 TDC=3
 ECB\ stress\ test=3
+application\ server=3
 stakeholder=4
 Docker=4
 JSP=4
@@ -374,7 +361,12 @@ comply=4
 product\ life\ cycle\ management=4
 Chromium=4
 Kubernetes=4
+metadata=5
+pagination=5
 e.g.=5
+postmortem=5
+DBA=5
+KPI=5
 runtime=5
 greedy\ solution=8
 interface=8
