master: enhanced negotiation with AI

--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,6 +1,8 @@
-SSH=-2
-SSL=-2
-HSM\ (device)=-1
+SSH=-3
+Helm\ chart=-1
+JWT=-1
+PVC\ (containerisation)=-1
+SSL=-1
 cluster=1
 tamper=1
 PR=1
@@ -10,20 +12,16 @@ Rancher\ features=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
 domain\ model=1
 pivot=1
-AD=1
 Argo\ CD=1
 hyphen\ ("-")\ function=1
 ICT\ system=1
-Hungarian\ pollution=1
-pod=1
 URL\ safe\ format=1
-full-text\ search=1
 .war\ file=1
+full-text\ search=1
 diamond\ operator\ (Java)=1
 credential\ examples=1
-Swagger=1
-aspect=1
 container\ management\ platform=1
+aspect=1
 RESTful\ data\ formats=1
 separation\ of\ concerns\ (DDD)=1
 Wireshark=1
@@ -49,13 +47,12 @@ to\ prompt=1
 factory\ pattern=1
 Google\ Cloud=1
 firewall\ opening=1
-component\ scanning=1
-regression\ testing=1
 garbage\ collection=1
 proprietary=1
 heap\ space=1
 JDBC=1
 defensive\ programming=1
+Liferay=1
 GCT=1
 gateway=1
 DNS=1
@@ -70,19 +67,16 @@ allocate=1
 Kibana=1
 test\ pilot\ (IT)=1
 ubiquitous\ language\ (DDD)=1
-roll\ out=1
 exponent\ (math)=1
-URL=1
+roll\ out=1
 web=1
 onboarding=1
 JPA\ entity\ management\ (db)=1
 DC\ components=1
 ECB=1
-bounded\ context\ (example\ of\ inventory\ management)=1
 GitHub\ repository\ access\ HTTPS\ vs\ SSH=1
+bounded\ context\ (example\ of\ inventory\ management)=1
 token=1
-pipeline=1
-framework=1
 assess=1
 chaos\ engineering=1
 pointcut=1
@@ -96,31 +90,25 @@ NFC=1
 DRY=1
 test\ integration=1
 cloud=1
-security\ testing=1
 NFS=1
-YubiKey=1
 DSL=1
 observability=1
-streamline=1
 volatile\ (Java)=1
 Ingress\ Controller=1
-Genesys\ Cloud=1
 container\ runtime=1
 DevOps=1
 namespace\ (networking)=1
 continuous\ integration\ components=1
 retrieve=1
 Spring\ boot=1
-GDPR=1
 DGOM=1
+GDPR=1
+HSM\ (device)=1
 ubiquitous=1
 semantic\ registration\ message=1
-Data\ governance=1
 VPN\ whitelisting=1
-Elasticsearch=1
-asynchronous=1
 object\ mapping\ (database)=1
-detrimental=1
+asynchronous=1
 DORA=1
 heap=1
 Hazelcast=1
@@ -131,10 +119,12 @@ means\ of\ defensive\ programming=1
 REST=1
 CTE\ (SQL)=1
 API=1
-hash\ use\ cases=1
 CTO=1
-connection\ pool\ (context\:\ database)=2
+pipeline\ (IT)=1
+pod=2
+Elasticsearch=2
 vague=2
+connection\ pool\ (context\:\ database)=2
 synchronous=2
 container\ image=2
 usability\ testing=2
@@ -142,28 +132,32 @@ functional\ testing=2
 F5\ rules=2
 directed\ graph=2
 sticky\ session\ benefit=2
+AD=2
 bad\ separation\ of\ concerns\ (DDD)=2
 trie=2
 JSX=2
 RESTful\ layers=2
 domain=2
+Hungarian\ pollution=2
 deterministic=2
 SES\ (Smart-ID)=2
 customer\ data\ domain=2
 remediation=2
+Swagger=2
+data\ custodian=2
 justified\ vs\ excusable=2
 staging\ environment=2
 real-time\ data\ flow=2
 assemble=2
 good\ separation\ of\ concerns\ for\ DocManager=2
-RBAC=2
 integration\ testing=2
+RBAC=2
 worker\ node=2
 bounded\ context\ (example\ of\ user\ management)=2
 deploying=2
 proxy\ pattern=2
-YAML=2
 container\ instance=2
+YAML=2
 distributed\ computing=2
 web\ container=2
 sticky\ session=2
@@ -174,9 +168,11 @@ F5=2
 enhanced=2
 VIP\ (OpenShift)=2
 entity\ (database)=2
+Kerberos\ principal=2
 lazy\ initialization=2
-feature\ flag=2
 coupling\ (noun)\ (software)=2
+feature\ flag=2
+regression\ testing=2
 enterprise-level=2
 operations\ specialist=2
 JSON=2
@@ -246,6 +242,7 @@ cohesion\ example=2
 credibility=2
 state\ (of\ object)=2
 memoization=2
+Hibernate=2
 artifact\ (context\:\ compilation)=2
 AES\ (Smart-ID)=2
 Jenkins=2
@@ -257,8 +254,10 @@ cohesion=2
 IoC=2
 signup\ metadata=2
 RESTful\ methods=2
+Data\ governance=2
 OpenShift\ vs\ Kubernetes?=2
 NOT\ IN\ (SQL)=2
+detrimental=2
 provisioning=2
 TDM=2
 cross\ architecture=2
@@ -275,6 +274,10 @@ Agile\ Test\ Quadrants=2
 OKR=2
 on-premises\ datacenter=2
 modal\ window=2
+YubiKey=3
+streamline=3
+framework=3
+hash\ use\ cases=3
 due\ diligence=3
 servlet=3
 CI\ (IT\ component)=3
@@ -290,6 +293,7 @@ bad\ cohesion\ (DDD)=3
 integrated\ test\ environment=3
 port=3
 XSS=3
+component\ scanning=3
 parity=3
 ORM=3
 Ivy\ integration\ to\ Gradle=3
@@ -301,8 +305,10 @@ Logread=3
 servlet\ container=3
 custody=3
 PII=3
+DevSecOps=3
 subnet=3
 etcd\ etymology=3
+security\ testing=3
 web\ server=3
 JPQL=3
 performance\ testing=3
@@ -355,12 +361,14 @@ PI\ planning=4
 legal\ person=4
 pseudonym=4
 substitution\ (general\ word)=4
+Bean\ factory/\ Application\ context=4
 outdegree=4
 CTE\ (sandbox)=4
 comply=4
 product\ life\ cycle\ management=4
 Chromium=4
 Kubernetes=4
+Genesys\ Cloud=5
 metadata=5
 pagination=5
 e.g.=5
