--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,11 +1,6 @@
-SSH=-5
-Helm\ chart=-1
-JWT=-1
-PVC\ (containerisation)=-1
-SSL=-1
+Helm=-1
 cluster=1
 tamper=1
-PR=1
 base\ (math)=1
 aspect\ oriented\ programming=1
 Rancher\ features=1
@@ -14,12 +9,10 @@ domain\ model=1
 pivot=1
 Argo\ CD=1
 hyphen\ ("-")\ function=1
-ICT\ system=1
 URL\ safe\ format=1
 .war\ file=1
 full-text\ search=1
 diamond\ operator\ (Java)=1
-credential\ examples=1
 container\ management\ platform=1
 aspect=1
 RESTful\ data\ formats=1
@@ -34,15 +27,15 @@ pipeline\ (IT)=1
 gateway\ team=1
 DC=1
 base\ Java\ Docker\ image=1
-cohesion\ (DDD)=1
 ICT\ system\ (components)=1
-bounded\ context\ (example\ of\ order\ processing)=1
 JETTY=1
+bounded\ context\ (example\ of\ order\ processing)=1
 MLM=1
 Kerberos=1
 DDoS\ attacks=1
 stub=1
 throughput=1
+PVC\ (containerisation)=1
 good\ cohesion\ (DDD)=1
 to\ prompt=1
 factory\ pattern=1
@@ -52,7 +45,6 @@ garbage\ collection=1
 proprietary=1
 heap\ space=1
 JDBC=1
-defensive\ programming=1
 Liferay=1
 GCT=1
 gateway=1
@@ -79,9 +71,7 @@ GitHub\ repository\ access\ HTTPS\ vs\ SSH=1
 bounded\ context\ (example\ of\ inventory\ management)=1
 token=1
 assess=1
-chaos\ engineering=1
 pointcut=1
-Helm=1
 Java\ bean=1
 etcd=1
 Unix=1
@@ -89,7 +79,6 @@ Java\ EE=1
 DRT=1
 NFC=1
 DRY=1
-test\ integration=1
 cloud=1
 NFS=1
 DSL=1
@@ -103,7 +92,6 @@ continuous\ integration\ components=1
 retrieve=1
 Spring\ boot=1
 DGOM=1
-GDPR=1
 HSM\ (device)=1
 ubiquitous=1
 semantic\ registration\ message=1
@@ -113,7 +101,6 @@ asynchronous=1
 DORA=1
 heap=1
 Hazelcast=1
-arbitrary=1
 collision\ resistant=1
 SSO=1
 means\ of\ defensive\ programming=1
@@ -121,6 +108,8 @@ REST=1
 CTE\ (SQL)=1
 API=1
 CTO=1
+em\ dash\ ("—")\ function=1
+chaos\ engineering=2
 vague=2
 connection\ pool\ (context\:\ database)=2
 synchronous=2
@@ -142,6 +131,7 @@ deterministic=2
 SES\ (Smart-ID)=2
 customer\ data\ domain=2
 remediation=2
+credential\ examples=2
 Swagger=2
 data\ custodian=2
 justified\ vs\ excusable=2
@@ -179,6 +169,7 @@ Ivy=2
 VPN=2
 OpenShift=2
 jar\ hell=2
+defensive\ programming=2
 subsetting\ data=2
 volatile=2
 hub=2
@@ -235,6 +226,7 @@ Loki\ (observability)=2
 canary\ deployment=2
 unit\ testing=2
 hashing=2
+test\ integration=2
 to\ stash=2
 irreversible\ data\ transformation=2
 cohesion\ example=2
@@ -265,6 +257,7 @@ namespace\ (cluster)=2
 permutation=2
 interface\ in\ java=2
 abstraction=2
+arbitrary=2
 using\ APIs=2
 stereotype\ in\ Spring=2
 Spring\ beans=2
@@ -280,7 +273,9 @@ CI\ (IT\ component)=3
 diligence=3
 AWS\ (cloud)=3
 dispose\ of\ memory=3
+ICT\ system=3
 cloud\ platform=3
+cohesion\ (DDD)=3
 DPIA=3
 IMDG=3
 ELK=3
@@ -315,6 +310,7 @@ paradigm=3
 JPA\ responsibilities\ (db)=3
 TDC=3
 ECB\ stress\ test=3
+SSL=3
 application\ server=3
 hash\ use\ cases=3
 stakeholder=4
@@ -346,6 +342,7 @@ SLO=4
 thoroughness=4
 poor\ separation\ of\ concerns\ for\ DocManager=4
 UAT=4
+URL=4
 FDP=4
 RDBMS=4
 PCI\ DSS=4
@@ -368,6 +365,8 @@ comply=4
 product\ life\ cycle\ management=4
 Chromium=4
 Kubernetes=4
+en\ dash\ ("–")\ function=4
+PR=5
 metadata=5
 pagination=5
 e.g.=5
