--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,18 +1,16 @@
-Helm=-1
 cluster=1
 base\ (math)=1
 aspect\ oriented\ programming=1
 Rancher\ features=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
 domain\ model=1
-pivot=1
 Argo\ CD=1
 hyphen\ ("-")\ function=1
 URL\ safe\ format=1
 full-text\ search=1
 diamond\ operator\ (Java)=1
-RESTful\ data\ formats=1
 container\ management\ platform=1
+RESTful\ data\ formats=1
 separation\ of\ concerns\ (DDD)=1
 Wireshark=1
 bounded\ context=1
@@ -22,13 +20,11 @@ gateway\ team=1
 DC=1
 ICT\ system\ (components)=1
 JETTY=1
-bounded\ context\ (example\ of\ order\ processing)=1
 MLM=1
 Kerberos=1
 DDoS\ attacks=1
 throughput=1
 good\ cohesion\ (DDD)=1
-to\ prompt=1
 factory\ pattern=1
 firewall\ opening=1
 proprietary=1
@@ -47,10 +43,8 @@ allocate\ a\ list=1
 Kerberos\ keytab\ key=1
 allocate=1
 Kibana=1
-test\ pilot\ (IT)=1
 ubiquitous\ language\ (DDD)=1
 exponent\ (math)=1
-roll\ out=1
 web=1
 onboarding=1
 JPA\ entity\ management\ (db)=1
@@ -59,8 +53,9 @@ GitHub\ repository\ access\ HTTPS\ vs\ SSH=1
 bounded\ context\ (example\ of\ inventory\ management)=1
 assess=1
 pointcut=1
-Java\ EE=1
+Helm=1
 Unix=1
+Java\ EE=1
 NFC=1
 DRY=1
 cloud=1
@@ -68,7 +63,6 @@ NFS=1
 DSL=1
 observability=1
 volatile\ (Java)=1
-Ingress\ Controller=1
 container\ runtime=1
 DevOps=1
 namespace\ (networking)=1
@@ -79,7 +73,6 @@ HSM\ (device)=1
 ubiquitous=1
 semantic\ registration\ message=1
 VPN\ whitelisting=1
-asynchronous=1
 object\ mapping\ (database)=1
 DORA=1
 Hazelcast=1
@@ -87,8 +80,8 @@ collision\ resistant=1
 means\ of\ defensive\ programming=1
 REST=1
 API=1
-connection\ pool\ (context\:\ database)=2
 vague=2
+connection\ pool\ (context\:\ database)=2
 synchronous=2
 container\ image=2
 usability\ testing=2
@@ -116,6 +109,7 @@ staging\ environment=2
 real-time\ data\ flow=2
 error\ budget=2
 assemble=2
+Helm\ chart=2
 good\ separation\ of\ concerns\ for\ DocManager=2
 integration\ testing=2
 RBAC=2
@@ -130,6 +124,7 @@ web\ container=2
 sticky\ session=2
 intrusive=2
 package\ (software)=2
+to\ prompt=2
 connection\ protection\ (examples)=2
 F5=2
 enhanced=2
@@ -256,6 +251,7 @@ CI\ (IT\ component)=3
 diligence=3
 AWS\ (cloud)=3
 dispose\ of\ memory=3
+pivot=3
 ICT\ system=3
 .war\ file=3
 cloud\ platform=3
@@ -298,6 +294,7 @@ performance\ testing=3
 paradigm=3
 JPA\ responsibilities\ (db)=3
 TDC=3
+asynchronous=3
 ECB\ stress\ test=3
 SSL=3
 application\ server=3
@@ -317,6 +314,7 @@ suite=4
 boilerplate=4
 technical\ debt=4
 AFC\ (compliance)=4
+JWT=4
 bounded=4
 Kerberos\ ticket=4
 dispose\ of\ a\ list=4
@@ -343,6 +341,7 @@ Azure=4
 DSS=4
 infer=4
 facilitate\ meeting=4
+GDPR=4
 PI\ planning=4
 legal\ person=4
 pseudonym=4
@@ -352,6 +351,7 @@ outdegree=4
 CTE\ (sandbox)=4
 comply=4
 product\ life\ cycle\ management=4
+SSH=4
 Chromium=4
 Kubernetes=4
 PR=5
@@ -364,6 +364,8 @@ Google\ Cloud=5
 pagination=5
 e.g.=5
 postmortem=5
+test\ pilot\ (IT)=5
+roll\ out=5
 DBA=5
 KPI=5
 DRT=5
