--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,3 +1,4 @@
+DORA=-1
 cluster=1
 base\ (math)=1
 aspect\ oriented\ programming=1
@@ -9,8 +10,8 @@ hyphen\ ("-")\ function=1
 URL\ safe\ format=1
 full-text\ search=1
 diamond\ operator\ (Java)=1
-RESTful\ data\ formats=1
 container\ management\ platform=1
+RESTful\ data\ formats=1
 separation\ of\ concerns\ (DDD)=1
 Wireshark=1
 bounded\ context=1
@@ -77,9 +78,9 @@ collision\ resistant=1
 means\ of\ defensive\ programming=1
 REST=1
 API=1
-Unix=2
-connection\ pool\ (context\:\ database)=2
+Ingress\ Controller=1
 vague=2
+connection\ pool\ (context\:\ database)=2
 synchronous=2
 container\ image=2
 usability\ testing=2
@@ -196,6 +197,7 @@ tampering=2
 facility=2
 Java\ bean=2
 etcd=2
+Unix=2
 Loki\ (observability)=2
 canary\ deployment=2
 unit\ testing=2
@@ -352,6 +354,7 @@ product\ life\ cycle\ management=4
 SSH=4
 Chromium=4
 Kubernetes=4
+SwiftUI=4
 PR=5
 metadata=5
 aspect=5
