--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,152 +1,195 @@
-DORA=-1
-cluster=1
-base\ (math)=1
 aspect\ oriented\ programming=1
-Rancher\ features=1
 reason\ for\ memory\ lack\ in\ Jenkins=1
 domain\ model=1
-Argo\ CD=1
-hyphen\ ("-")\ function=1
 URL\ safe\ format=1
 full-text\ search=1
+RESTful\ data\ formats=1
+bounded\ context=1
+DC=1
+ICT\ system\ (components)=1
+bounded\ context\ (example\ of\ order\ processing)=1
+DDoS\ attacks=1
+DNS=1
+Kerberos\ keytab=1
+exploratory\ testing=1
+dispatcher=1
+allocate\ a\ list=1
+Kibana=1
+exponent\ (math)=1
+JPA\ entity\ management\ (db)=1
+DC\ components=1
+bounded\ context\ (example\ of\ inventory\ management)=1
+GitHub\ repository\ access\ HTTPS\ vs\ SSH=1
+pointcut=1
+Java\ EE=1
+NFC=1
+NFS=1
+DSL=1
+observability=1
+volatile\ (Java)=1
+namespace\ (networking)=1
+Spring\ boot=1
+DGOM=1
+ubiquitous=1
+semantic\ registration\ message=1
+heap=1
+collision\ resistant=1
+API=1
+tamper=1
+cluster=1
+base\ (math)=1
+Rancher\ features=1
+Argo\ CD=1
+hyphen\ ("-")\ function=1
 diamond\ operator\ (Java)=1
 container\ management\ platform=1
-RESTful\ data\ formats=1
-separation\ of\ concerns\ (DDD)=1
 Wireshark=1
-bounded\ context=1
 good\ cohesion\ for\ DocManager=1
 pipeline\ (IT)=1
 gateway\ team=1
-DC=1
-ICT\ system\ (components)=1
-JETTY=1
 MLM=1
 Kerberos=1
-DDoS\ attacks=1
 throughput=1
 good\ cohesion\ (DDD)=1
 factory\ pattern=1
 firewall\ opening=1
 proprietary=1
 heap\ space=1
-JDBC=1
 Liferay=1
 GCT=1
 gateway=1
-DNS=1
 Saba=1
-Kerberos\ keytab=1
-exploratory\ testing=1
-dispatcher=1
 database\ transactions=1
-allocate\ a\ list=1
-Kerberos\ keytab\ key=1
 allocate=1
-Kibana=1
-ubiquitous\ language\ (DDD)=1
-exponent\ (math)=1
-web=1
 onboarding=1
-JPA\ entity\ management\ (db)=1
-DC\ components=1
-GitHub\ repository\ access\ HTTPS\ vs\ SSH=1
-bounded\ context\ (example\ of\ inventory\ management)=1
 assess=1
-pointcut=1
-Helm=1
-NFC=1
-DRY=1
-cloud=1
-NFS=1
-DSL=1
-observability=1
-volatile\ (Java)=1
-container\ runtime=1
 DevOps=1
-namespace\ (networking)=1
-continuous\ integration\ components=1
-Spring\ boot=1
-DGOM=1
-HSM\ (device)=1
-ubiquitous=1
-semantic\ registration\ message=1
 VPN\ whitelisting=1
 object\ mapping\ (database)=1
-Hazelcast=1
-collision\ resistant=1
-means\ of\ defensive\ programming=1
-REST=1
-API=1
-Ingress\ Controller=1
+ubiquitous\ language\ (DDD)=2
+HSM\ (device)=2
+container\ runtime=2
+Kerberos\ keytab\ key=2
+JETTY=2
+REST=2
 vague=2
-connection\ pool\ (context\:\ database)=2
-synchronous=2
 container\ image=2
 usability\ testing=2
 functional\ testing=2
-F5\ rules=2
-directed\ graph=2
-sticky\ session\ benefit=2
 AD=2
-bad\ separation\ of\ concerns\ (DDD)=2
 trie=2
 JSX=2
-RESTful\ layers=2
 domain=2
-Hungarian\ pollution=2
-pod=2
-deterministic=2
-SES\ (Smart-ID)=2
 customer\ data\ domain=2
-remediation=2
-credential\ examples=2
-Swagger=2
-data\ custodian=2
-justified\ vs\ excusable=2
-staging\ environment=2
 real-time\ data\ flow=2
-error\ budget=2
 assemble=2
 Helm\ chart=2
 good\ separation\ of\ concerns\ for\ DocManager=2
 integration\ testing=2
-RBAC=2
-worker\ node=2
 bounded\ context\ (example\ of\ user\ management)=2
 deploying=2
-proxy\ pattern=2
 container\ instance=2
-YAML=2
-distributed\ computing=2
-web\ container=2
 sticky\ session=2
 intrusive=2
 package\ (software)=2
-to\ prompt=2
-connection\ protection\ (examples)=2
 F5=2
-enhanced=2
 VIP\ (OpenShift)=2
 entity\ (database)=2
-Kerberos\ principal=2
-lazy\ initialization=2
 coupling\ (noun)\ (software)=2
-feature\ flag=2
 regression\ testing=2
 enterprise-level=2
 operations\ specialist=2
 JSON=2
 Ivy=2
 VPN=2
-OpenShift=2
 jar\ hell=2
-defensive\ programming=2
 subsetting\ data=2
-volatile=2
 hub=2
 good\ separation\ of\ concerns\ (DDD)=2
 partition\ and\ sample=2
+SLI=2
+data\ pseudonymization=2
+landing\ page=2
+RESTful=2
+code\ integration=2
+build\ process=2
+value\ stream=2
+web\ portal=2
+edge\ (graphs)=2
+stop\ word\ filtering=2
+data\ flow=2
+hash=2
+operational\ risk=2
+product\ backlog\ (agile)=2
+Rancher\ platform=2
+semantic\ message=2
+RESTful\ client-server=2
+abstraction\ examples=2
+commissioning=2
+verbose=2
+CI/CD=2
+etcd=2
+Unix=2
+unit\ testing=2
+hashing=2
+test\ integration=2
+to\ stash=2
+cohesion\ example=2
+credibility=2
+Hibernate=2
+Jenkins=2
+traverse=2
+dispose=2
+signup\ metadata=2
+RESTful\ methods=2
+Data\ governance=2
+Elasticsearch=2
+OpenShift\ vs\ Kubernetes?=2
+NOT\ IN\ (SQL)=2
+provisioning=2
+detrimental=2
+cross\ architecture=2
+permutation=2
+abstraction=2
+SSO=2
+Spring\ beans=2
+due=2
+OKR=2
+modal\ window=2
+CTO=2
+connection\ pool\ (context\:\ database)=2
+synchronous=2
+F5\ rules=2
+directed\ graph=2
+sticky\ session\ benefit=2
+bad\ separation\ of\ concerns\ (DDD)=2
+RESTful\ layers=2
+Hungarian\ pollution=2
+pod=2
+deterministic=2
+SES\ (Smart-ID)=2
+remediation=2
+credential\ examples=2
+Swagger=2
+data\ custodian=2
+justified\ vs\ excusable=2
+staging\ environment=2
+error\ budget=2
+RBAC=2
+worker\ node=2
+proxy\ pattern=2
+YAML=2
+distributed\ computing=2
+web\ container=2
+to\ prompt=2
+connection\ protection\ (examples)=2
+enhanced=2
+Kerberos\ principal=2
+lazy\ initialization=2
+feature\ flag=2
+OpenShift=2
+defensive\ programming=2
+volatile=2
 container=2
 commissioning\ example\ sentence=2
 encapsulation=2
@@ -155,224 +198,185 @@ UI\ dialog=2
 overlay\ (web)=2
 CDD\ (compliance)=2
 deque=2
-SLI=2
 credential=2
 Kafka\ vs\ Kubernetes=2
-data\ pseudonymization=2
 undirected\ graph=2
-landing\ page=2
-RESTful=2
-code\ integration=2
 PV\ (containerisation)=2
 Logstash=2
-build\ process=2
 obfuscate\ data=2
-value\ stream=2
 integrity\ (of\ documents)=2
-web\ portal=2
-edge\ (graphs)=2
-stop\ word\ filtering=2
-data\ flow=2
-hash=2
 secret\ (Kubernetes)=2
 artifactory=2
 microservice=2
 Kafka=2
-operational\ risk=2
 QES\ (Smart-ID)=2
-product\ backlog\ (agile)=2
-Rancher\ platform=2
+web=2
 domain\ vs\ bounded\ context=2
-RESTful\ client-server=2
-semantic\ message=2
 A/B\ testing=2
-abstraction\ examples=2
-commissioning=2
-verbose=2
 firewall=2
 API\ gateway=2
-CI/CD=2
 chaos\ engineering=2
 tampering=2
 facility=2
 Java\ bean=2
-etcd=2
-Unix=2
 Loki\ (observability)=2
 canary\ deployment=2
-unit\ testing=2
-hashing=2
-test\ integration=2
-to\ stash=2
 irreversible\ data\ transformation=2
-cohesion\ example=2
-credibility=2
 state\ (of\ object)=2
 memoization=2
-Hibernate=2
 artifact\ (context\:\ compilation)=2
 AES\ (Smart-ID)=2
-Jenkins=2
-traverse=2
 collision=2
 backlog=2
-dispose=2
+continuous\ integration\ components=2
 cohesion=2
 IoC=2
-signup\ metadata=2
-RESTful\ methods=2
-Data\ governance=2
-Elasticsearch=2
-OpenShift\ vs\ Kubernetes?=2
-NOT\ IN\ (SQL)=2
-detrimental=2
-provisioning=2
 TDM=2
-cross\ architecture=2
 namespace\ (cluster)=2
-permutation=2
 interface\ in\ java=2
-abstraction=2
-arbitrary=2
 using\ APIs=2
-SSO=2
+arbitrary=2
 stereotype\ in\ Spring=2
-Spring\ beans=2
 test\ data\ management\ for\ enterprise=2
-due=2
 Agile\ Test\ Quadrants=2
-OKR=2
 on-premises\ datacenter=2
-modal\ window=2
-CTO=2
-due\ diligence=3
+DRY=3
+means\ of\ defensive\ programming=3
+JDBC=3
 servlet=3
 CI\ (IT\ component)=3
 diligence=3
 AWS\ (cloud)=3
 dispose\ of\ memory=3
-pivot=3
-ICT\ system=3
 .war\ file=3
-cloud\ platform=3
 base\ Java\ Docker\ image=3
-cohesion\ (DDD)=3
-DPIA=3
 IMDG=3
 ELK=3
-indegree=3
-bad\ cohesion\ (DDD)=3
-integrated\ test\ environment=3
 port=3
 XSS=3
 component\ scanning=3
 parity=3
-ORM=3
-garbage\ collection=3
-Ivy\ integration\ to\ Gradle=3
 TLS=3
 signup\ raw\ data=3
-compatibility\ testing=3
-personal\ data\ retention=3
 Logread=3
-servlet\ container=3
 custody=3
-ECB=3
-token=3
 PII=3
 framework=3
-DevSecOps=3
 subnet=3
-etcd\ etymology=3
-security\ testing=3
-YubiKey=3
-streamline=3
 web\ server=3
 retrieve=3
 JPQL=3
 performance\ testing=3
 paradigm=3
+ECB\ stress\ test=3
+Hazelcast=3
+SSL=3
+application\ server=3
+due\ diligence=3
+pivot=3
+ICT\ system=3
+cloud\ platform=3
+cohesion\ (DDD)=3
+DPIA=3
+indegree=3
+bad\ cohesion\ (DDD)=3
+integrated\ test\ environment=3
+ORM=3
+garbage\ collection=3
+Ivy\ integration\ to\ Gradle=3
+compatibility\ testing=3
+personal\ data\ retention=3
+servlet\ container=3
+ECB=3
+token=3
+DevSecOps=3
+etcd\ etymology=3
+security\ testing=3
+YubiKey=3
+streamline=3
 JPA\ responsibilities\ (db)=3
 TDC=3
 asynchronous=3
-ECB\ stress\ test=3
-SSL=3
-application\ server=3
+DORA=3
 hash\ use\ cases=3
-stakeholder=4
 Docker=4
 JSP=4
 JPA\ (db)=4
 master\ node=4
-endpoint=4
 PPTE=4
 penetration\ testing=4
 WoW=4
 mitigate=4
+SwiftUI=4
 EDD\ (compliance)=4
 suite=4
 boilerplate=4
-technical\ debt=4
 AFC\ (compliance)=4
 JWT=4
-bounded=4
 Kerberos\ ticket=4
 dispose\ of\ a\ list=4
-throttling=4
 deduce=4
-git\ stash=4
 present()\ (Fluentlenium)=4
 accessibility\ testing=4
 abstract\ class=4
 non-semantic\ message=4
 SLO=4
 thoroughness=4
-poor\ separation\ of\ concerns\ for\ DocManager=4
-UAT=4
 URL=4
-FDP=4
 RDBMS=4
 PCI\ DSS=4
-DAO=4
-fetch=4
-servlet\ vs\ controller=4
-POJO=4
 Azure=4
 DSS=4
 infer=4
 facilitate\ meeting=4
-GDPR=4
 PI\ planning=4
-legal\ person=4
 pseudonym=4
-substitution\ (general\ word)=4
 Bean\ factory/\ Application\ context=4
-outdegree=4
 CTE\ (sandbox)=4
-comply=4
 product\ life\ cycle\ management=4
 SSH=4
+stakeholder=4
+endpoint=4
+technical\ debt=4
+bounded=4
+throttling=4
+git\ stash=4
+poor\ separation\ of\ concerns\ for\ DocManager=4
+UAT=4
+FDP=4
+DAO=4
+fetch=4
+servlet\ vs\ controller=4
+POJO=4
+GDPR=4
+legal\ person=4
+substitution\ (general\ word)=4
+outdegree=4
+comply=4
 Chromium=4
 Kubernetes=4
-SwiftUI=4
+en\ dash\ ("–")\ function=4
+em\ dash\ ("—")\ function=4
+separation\ of\ concerns\ (DDD)=5
+cloud=5
+aspect=5
+stub=5
+Google\ Cloud=5
+roll\ out=5
+DRT=5
+CTE\ (SQL)=5
 PR=5
 metadata=5
-aspect=5
 servlet/controller/MVC=5
-stub=5
 PVC\ (containerisation)=5
-Google\ Cloud=5
 pagination=5
 e.g.=5
 postmortem=5
 test\ pilot\ (IT)=5
-roll\ out=5
 DBA=5
 KPI=5
-DRT=5
 runtime=5
 Genesys\ Cloud=5
-CTE\ (SQL)=5
 greedy\ solution=8
 interface=8
 CFT\ (context\:\ company\ structure)=8
