--- a/src/main/java/org/sa/score/score.properties
+++ b/src/main/java/org/sa/score/score.properties
@@ -1,3 +1,4 @@
+exploratory\ testing=-1
 cluster=1
 aspect\ oriented\ programming=1
 base\ (math)=1
@@ -9,8 +10,8 @@ hyphen\ ("-")\ function=1
 URL\ safe\ format=1
 full-text\ search=1
 diamond\ operator\ (Java)=1
-RESTful\ data\ formats=1
 container\ management\ platform=1
+RESTful\ data\ formats=1
 bounded\ context=1
 good\ cohesion\ for\ DocManager=1
 pipeline\ (IT)=1
@@ -56,8 +57,8 @@ object\ mapping\ (database)=1
 heap=1
 collision\ resistant=1
 API=1
-connection\ pool\ (context\:\ database)=2
 vague=2
+connection\ pool\ (context\:\ database)=2
 tamper=2
 synchronous=2
 container\ image=2
@@ -180,6 +181,7 @@ API\ gateway=2
 CI/CD=2
 chaos\ engineering=2
 tampering=2
+Helm=2
 facility=2
 Java\ bean=2
 etcd=2
@@ -198,6 +200,7 @@ memoization=2
 Hibernate=2
 artifact\ (context\:\ compilation)=2
 AES\ (Smart-ID)=2
+Ingress\ Controller=2
 Jenkins=2
 container\ runtime=2
 traverse=2
@@ -375,3 +378,5 @@ CTE\ (SQL)=5
 greedy\ solution=8
 interface=8
 CFT\ (context\:\ company\ structure)=8
+em\ dash\ ("—")\ function=10
+en\ dash\ ("–")\ function=12
